--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\EnnemyTest.cs" />
+    <Compile Include="Assets\Scripts\GameplayManager.cs" />
     <Compile Include="Assets\Scripts\PlayerMove.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity.2019.12f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
